<resources>
    <string name="app_name">Skin AI</string>
    <string name="our_mission">Our mission is to assist you in detecting skin diseases</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_text">Welcome to SKIN.AI</string>
    <string name="lets_create">Let\'s Create You A New Account!</string>
    <string name="we_so_glad">We so glad to have you here.</string>
    <string name="ion_return">Back to home</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="agree_terms"><![CDATA[I agree with terms & conditions]]></string>
    <string name="already_have">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="remember">Remember me</string>
    <string name="forgot">Forgot password?</string>
    <string name="dont_have">Don’t have an account ?</string>
    <string name="check">Skin Check</string>
    <string name="record">Medical Records</string>
    <string name="welcome_sub_main">Let’s check your skin</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_home">Home Page</string>
    <string name="title_home">Home</string>
    <string name="title_check">Skin Check</string>
    <string name="title_record">Medical Records</string>
    <string name="title_profile">Profile</string>
    <string name="tap_instruction">Tap on the body map to detect your skin</string>
    <string name="camera_instruction">Point the camera at the skin you want to detect</string>
    <string name="btn_check">CHECK</string>
    <string name="tv_result">This is your diagnose</string>
    <string name="welcome_home_text">Hi, Sally!</string>
    <string name="box_camera_instruction">Tap to Upload an Image</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="result">Result</string>
    <string name="content_result">The result of your diagnose is Psioriasis.\nPsoriasis is a chronic and autoimmune inflammatory disease (disease that appears as a result of a reaction of the immune system or the body\'s immune system) that occurs on the skin characterized by thick white, silver, or red scaly patches in various parts of the body triggered by environmental factors, immune attack body (autoimmune) due to an abnormal number of lymphocytes, and an overactive immune system.\nHere are some precautions that can be taken.</string>

</resources>