<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp"
        app:popupTheme="@style/Theme.SkinAI.AppBarOverlay" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_regis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_lets_create"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="57dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/lets_create"
            android:textColor="@color/black_title"
            android:textSize="29sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_we_so_glad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="57dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/we_so_glad"
            android:textColor="@color/black_title"
            android:textSize="29sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lets_create" />

        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="49dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/montserrat_alternates"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="24.36dp"
            android:paddingTop="24.79dp"
            android:paddingBottom="22.43dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_we_so_glad" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="49dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/montserrat_alternates"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="24.36dp"
            android:paddingTop="24.79dp"
            android:paddingBottom="22.43dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_fullname" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="49dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/montserrat_alternates"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="24.36dp"
            android:paddingTop="24.79dp"
            android:paddingBottom="22.43dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <CheckBox
            android:id="@+id/cb_agree_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="103dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/agree_terms"
            android:textColor="@color/black_title"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <TextView
            android:id="@+id/tv_already_have"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/already_have"
            android:textColor="@color/black_title"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/button_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:text="@string/login"
            android:textColor="@color/black_title"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/button_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_already_have" />

        <TextView
            android:id="@+id/tv_btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="134dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="134dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="top"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="10sp"
            android:text="@string/btn_sign_up"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_sign"
            app:layout_constraintEnd_toEndOf="@+id/button_sign"
            app:layout_constraintStart_toStartOf="@+id/button_sign"
            app:layout_constraintTop_toTopOf="@+id/button_sign" />

        <View
            android:id="@+id/button_sign"
            android:layout_width="347.76dp"
            android:layout_height="66.21dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/button_sign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>