<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/montserrat_alternates"
        android:gravity="top"
        android:letterSpacing="-0.01"
        android:text="@string/welcome_text"
        android:textColor="@color/black_title"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_doctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="66dp"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        android:src="@drawable/home_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <TextView
        android:id="@+id/tv_our_mission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="134dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="top"
        android:letterSpacing="-0.02"
        android:text="@string/our_mission"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_doctor" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat_alternates"
        android:gravity="top"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="10sp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_sign"
        app:layout_constraintEnd_toEndOf="@+id/button_sign"
        app:layout_constraintStart_toStartOf="@+id/button_sign"
        app:layout_constraintTop_toTopOf="@+id/button_sign" />

    <View
        android:id="@+id/button_sign"
        android:layout_width="0dp"
        android:layout_height="66.21dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/button_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_our_mission" />

</androidx.constraintlayout.widget.ConstraintLayout>