<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".ui.MainMenuActivity">

    <TextView
        android:id="@+id/tv_welcome_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="top"
        android:letterSpacing="-0.02"
        android:textColor="@color/black_title"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sub_welcome_main"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Hi, Sally!" />

    <TextView
        android:id="@+id/tv_sub_welcome_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="87dp"
        android:fontFamily="@font/montserrat"
        android:gravity="top"
        android:letterSpacing="-0.02"
        android:text="@string/welcome_sub_main"
        android:textColor="@color/black_title"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_check"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_main" />

    <View
        android:id="@+id/rectangle_check"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="127dp"
        android:importantForAccessibility="no"
        android:background="@drawable/rectangle_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_check_logo"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/check"
        android:src="@drawable/check_logo"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_check"
        app:layout_constraintStart_toStartOf="@+id/rectangle_check"
        app:layout_constraintTop_toTopOf="@+id/rectangle_check" />

    <TextView
        android:id="@+id/tv_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/check"
        android:textColor="@color/black_title"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_check"
        app:layout_constraintStart_toStartOf="@+id/rectangle_check"
        app:layout_constraintTop_toBottomOf="@+id/img_check_logo" />

    <View
        android:id="@+id/rectangle_record"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="127dp"
        android:importantForAccessibility="no"
        android:background="@drawable/rectangle_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_check" />

    <ImageView
        android:id="@+id/img_record_logo"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/record"
        android:src="@drawable/record_logo"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_record"
        app:layout_constraintStart_toStartOf="@+id/rectangle_record"
        app:layout_constraintTop_toTopOf="@+id/rectangle_record" />

    <TextView
        android:id="@+id/tv_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/record"
        android:textColor="@color/black_title"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_record"
        app:layout_constraintStart_toStartOf="@+id/rectangle_record"
        app:layout_constraintTop_toBottomOf="@+id/img_record_logo" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/bottom_nav_background"
        app:itemIconTint="@color/bottom_nav"
        app:itemTextColor="@color/bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>